css change for icons

--- a/site_assets/cloud_admin/css/additional.css
+++ b/site_assets/cloud_admin/css/additional.css
@@ -84,17 +84,17 @@ img#uploadPreview{
 }
 
 .cr_FastCoin {
-    background-image: url("../img/cripto/Fastcoin.png");
+    background-image: url("../img/cripto/fastcoin.png");
 }
 
 .cr_DigitalCoin {
-    background-image: url("../img/cripto/Digitalcoin.png")
+    background-image: url("../img/cripto/digitalcoin.png")
 }
 
 .cr_DogeCoin {
-    background-image: url("../img/cripto/Dogecoin.png")
+    background-image: url("../img/cripto/dogecoin.png")
 }
 
 .cr_EarthCoin {
-    background-image: url("../img/cripto/Earthcoin.png")
+    background-image: url("../img/cripto/earthcoin.png")
 }
